# crewai-trading-strategy

./: .gitignore  CLAUDE.md  README.md  last_run_log.txt  pyproject.toml
data/: BFH.csv  BTC-USD_2014_2024.csv
output/: trading_strategy_creation_attempts_log.json  trading_strategy_design.md  trading_strategy_implementation  trading_strategy_implementation.py  trading_strategy_outline.md
src/crewai_trading_strategy/: constants.py  main.py  strategy_code_guidelines.py  types.py
src/crewai_trading_strategy/crews/dummy_developer_crew/: dummy_crew.py
src/crewai_trading_strategy/crews/dummy_developer_crew/config/: agents.yaml  tasks.yaml
src/crewai_trading_strategy/crews/trading_strategy_crew/: strategy_code_guidelines.py  trading_strategy_crew.py
src/crewai_trading_strategy/crews/trading_strategy_crew/config/: agents.yaml  tasks.yaml
src/crewai_trading_strategy/guardrails/: backtester_guardrail.py
src/crewai_trading_strategy/tools/: execute_analysis_code_tool.py  get_for_date_range_tool.py  run_strategy_backtest_tool.py
src/utils/: code_utils.py  date_utils.py  historical_daily_prices_helper.py  json_utils.py  safe_python_code_executor.py  strategy_backtester.py
tests/: test_historical_prices.py  test_safe_executor.py  test_strategy_backtester.py
