[project]
name = "crewai_trading_strategy"
version = "0.1.0"
description = "crewai_trading_strategy using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.3.251201",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
]

[project.scripts]
kickoff = "crewai_trading_strategy.main:kickoff"
run_crew = "crewai_trading_strategy.main:kickoff"
plot = "crewai_trading_strategy.main:plot"
run_with_trigger = "crewai_trading_strategy.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
